# netface

./: Cargo.toml  Cross.toml  README.md  install.sh  mba
.github/workflows/: release.yml
src/: audio.rs  config.rs  logging.rs  main.rs  net.rs  theme.rs  video.rs
src/conn/: bridge.rs  channel.rs  error.rs  identity.rs  mod.rs
src/conn/nostr/: discovery.rs  mod.rs  signaling.rs
src/conn/webrtc/: ice.rs  mod.rs  sdp.rs
src/ui/: keys.rs  mod.rs  widgets.rs
