[package]
name = "netface"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "netface"
path = "src/main.rs"

[dependencies]
clap       = { version = "4", features = ["derive"] }
cpal       = "0.15"
crossbeam-channel = "0.5"
lz4_flex   = "0.11"
image      = { version = "0.25", default-features = false, features = ["png"] }
crossterm  = "0.28"
ratatui       = "0.29"
unicode-width = "0.1"
ort        = "2.0.0-rc.12"
serde      = { version = "1", features = ["derive"] }
toml       = "0.8"
dirs       = "5"

# Connectivity module dependencies
tokio      = { version = "1.35", features = ["rt-multi-thread", "sync", "net", "time", "macros"] }
nostr-sdk  = "0.30"
str0m      = "0.16"
secp256k1  = { version = "0.29", features = ["rand-std"] }
bech32     = "0.11"
thiserror  = "1.0"
uuid       = { version = "1", features = ["v4"] }
chrono = "0.4.44"
self_update = { version = "0.42", features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Platform-specific webcam backends
[target.'cfg(target_os = "linux")'.dependencies]
nokhwa = { version = "0.10", features = ["input-v4l"] }

[target.'cfg(target_os = "macos")'.dependencies]
nokhwa = { version = "0.10", features = ["input-avfoundation"] }

[target.'cfg(target_os = "windows")'.dependencies]
nokhwa = { version = "0.10", features = ["input-msmf"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
